--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/itz-essie/stepping_out/issues"
   },
-  "homepage": "https://github.com/itz-essie/stepping_out#readme"
+  "homepage": "https://github.com/itz-essie/stepping_out#readme",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
+    "handlebars-helper-css": "^0.1.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
+  }
 }
