--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
+    "formidable": "^1.2.2",
     "handlebars-helper-css": "^0.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
